# Misc

Misc/: FileCrypt.asm  Remove-Comment.ps1  brightness_control.c  cipher.py  youtube-dl.py
Misc/ProcessProxy/proxy_c/: Cargo.toml  proxy.py
Misc/ProcessProxy/proxy_c/src/: main.rs
Misc/ProcessProxy/proxy_s/: Cargo.toml
Misc/ProcessProxy/proxy_s/src/: main.rs
Misc/Rigid-Compliant Mechanism/: pointer_mech_for3dprinting_thick.STL  pointer_mech_for3dprinting_thin.STL  pointer_mech_original.STL
Misc/YubikeySetup/: key_setup.txt  libpam-u2f_1.1.0-1.1_amd64.deb  pamu2fcfg_1.1.0-1.1_amd64.deb
Misc/rpiRadioProjects/: controls.py  move.py
Misc/rpiRadioProjects/pyinput-master/: README.rst  setup.py
Misc/rpiRadioProjects/pyinput-master/debian/: changelog  control  copyright  rules
Misc/rpiRadioProjects/pyinput-master/pyinput/: __init__.py  uinput.i
Misc/sysCall/Syscall-Example/: Program.cs  README.md
Misc/sysCall/Syscall-Example/Properties/: AssemblyInfo.cs
