[package]
name = "network_proxy_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
egui = "0.22.0"
sysinfo = "0.29.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }