[package]
name = "server_proxy_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
egui = "0.22.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }